--- a/src/components/Header/nav/Footer/style.module.scss
+++ b/src/components/Header/nav/Footer/style.module.scss
@@ -10,4 +10,10 @@
         color: white;
         text-decoration: none;
     }
+
+    @media (max-width: 768px) {
+        gap: 10px;
+        flex-wrap: wrap;
+        /* Ensure it wraps if it still overflows */
+    }
 }
